// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`semicolon.ts - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
abstract class C {
  abstract get;
  x() {}
}

=====================================output=====================================
abstract class C {
  abstract get;
  x() {}
}

================================================================================
`;

exports[`semicolon.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
abstract class C {
  abstract get;
  x() {}
}

=====================================output=====================================
abstract class C {
  abstract get;
  x() {}
}

================================================================================
`;
